frontend/parser.automaton
State 0:
file_input' -> . file_input [ # ]
-- On SEMICOLON shift to state 1
-- On NEWLINE shift to state 2
-- On sep shift to state 3
-- On list(sep) shift to state 5
-- On file_input shift to state 142
-- On USING reduce production list(sep) -> 
-- On UNDERSCORE reduce production list(sep) -> 
-- On IMPORT reduce production list(sep) -> 
-- On IDENT reduce production list(sep) -> 
-- On FUNCTION reduce production list(sep) -> 
-- On EOF reduce production list(sep) -> 

State 1:
sep -> SEMICOLON . [ USING UNDERSCORE TRUE STRING SEMICOLON RIGHT_STAB RIGHT_FAT RIGHT_CURVY RCURLY PIPE NEWLINE LPAREN LET LCURLY INT64 INT32 INT IN IMPORT IDENT FUNCTION FLOAT FALSE EOF END BEGIN ]
-- On USING reduce production sep -> SEMICOLON 
-- On UNDERSCORE reduce production sep -> SEMICOLON 
-- On TRUE reduce production sep -> SEMICOLON 
-- On STRING reduce production sep -> SEMICOLON 
-- On SEMICOLON reduce production sep -> SEMICOLON 
-- On RIGHT_STAB reduce production sep -> SEMICOLON 
-- On RIGHT_FAT reduce production sep -> SEMICOLON 
-- On RIGHT_CURVY reduce production sep -> SEMICOLON 
-- On RCURLY reduce production sep -> SEMICOLON 
-- On PIPE reduce production sep -> SEMICOLON 
-- On NEWLINE reduce production sep -> SEMICOLON 
-- On LPAREN reduce production sep -> SEMICOLON 
-- On LET reduce production sep -> SEMICOLON 
-- On LCURLY reduce production sep -> SEMICOLON 
-- On INT64 reduce production sep -> SEMICOLON 
-- On INT32 reduce production sep -> SEMICOLON 
-- On INT reduce production sep -> SEMICOLON 
-- On IN reduce production sep -> SEMICOLON 
-- On IMPORT reduce production sep -> SEMICOLON 
-- On IDENT reduce production sep -> SEMICOLON 
-- On FUNCTION reduce production sep -> SEMICOLON 
-- On FLOAT reduce production sep -> SEMICOLON 
-- On FALSE reduce production sep -> SEMICOLON 
-- On EOF reduce production sep -> SEMICOLON 
-- On END reduce production sep -> SEMICOLON 
-- On BEGIN reduce production sep -> SEMICOLON 

State 2:
sep -> NEWLINE . [ USING UNDERSCORE TRUE STRING SEMICOLON RIGHT_STAB RIGHT_FAT RIGHT_CURVY RCURLY PIPE NEWLINE LPAREN LET LCURLY INT64 INT32 INT IN IMPORT IDENT FUNCTION FLOAT FALSE EOF END BEGIN ]
-- On USING reduce production sep -> NEWLINE 
-- On UNDERSCORE reduce production sep -> NEWLINE 
-- On TRUE reduce production sep -> NEWLINE 
-- On STRING reduce production sep -> NEWLINE 
-- On SEMICOLON reduce production sep -> NEWLINE 
-- On RIGHT_STAB reduce production sep -> NEWLINE 
-- On RIGHT_FAT reduce production sep -> NEWLINE 
-- On RIGHT_CURVY reduce production sep -> NEWLINE 
-- On RCURLY reduce production sep -> NEWLINE 
-- On PIPE reduce production sep -> NEWLINE 
-- On NEWLINE reduce production sep -> NEWLINE 
-- On LPAREN reduce production sep -> NEWLINE 
-- On LET reduce production sep -> NEWLINE 
-- On LCURLY reduce production sep -> NEWLINE 
-- On INT64 reduce production sep -> NEWLINE 
-- On INT32 reduce production sep -> NEWLINE 
-- On INT reduce production sep -> NEWLINE 
-- On IN reduce production sep -> NEWLINE 
-- On IMPORT reduce production sep -> NEWLINE 
-- On IDENT reduce production sep -> NEWLINE 
-- On FUNCTION reduce production sep -> NEWLINE 
-- On FLOAT reduce production sep -> NEWLINE 
-- On FALSE reduce production sep -> NEWLINE 
-- On EOF reduce production sep -> NEWLINE 
-- On END reduce production sep -> NEWLINE 
-- On BEGIN reduce production sep -> NEWLINE 

State 3:
list(sep) -> sep . list(sep) [ USING UNDERSCORE TRUE STRING PIPE LPAREN LET LCURLY INT64 INT32 INT IN IMPORT IDENT FUNCTION FLOAT FALSE EOF BEGIN ]
-- On SEMICOLON shift to state 1
-- On NEWLINE shift to state 2
-- On sep shift to state 3
-- On list(sep) shift to state 4
-- On USING reduce production list(sep) -> 
-- On UNDERSCORE reduce production list(sep) -> 
-- On TRUE reduce production list(sep) -> 
-- On STRING reduce production list(sep) -> 
-- On PIPE reduce production list(sep) -> 
-- On LPAREN reduce production list(sep) -> 
-- On LET reduce production list(sep) -> 
-- On LCURLY reduce production list(sep) -> 
-- On INT64 reduce production list(sep) -> 
-- On INT32 reduce production list(sep) -> 
-- On INT reduce production list(sep) -> 
-- On IN reduce production list(sep) -> 
-- On IMPORT reduce production list(sep) -> 
-- On IDENT reduce production list(sep) -> 
-- On FUNCTION reduce production list(sep) -> 
-- On FLOAT reduce production list(sep) -> 
-- On FALSE reduce production list(sep) -> 
-- On EOF reduce production list(sep) -> 
-- On BEGIN reduce production list(sep) -> 

State 4:
list(sep) -> sep list(sep) . [ USING UNDERSCORE TRUE STRING PIPE LPAREN LET LCURLY INT64 INT32 INT IN IMPORT IDENT FUNCTION FLOAT FALSE EOF BEGIN ]
-- On USING reduce production list(sep) -> sep list(sep) 
-- On UNDERSCORE reduce production list(sep) -> sep list(sep) 
-- On TRUE reduce production list(sep) -> sep list(sep) 
-- On STRING reduce production list(sep) -> sep list(sep) 
-- On PIPE reduce production list(sep) -> sep list(sep) 
-- On LPAREN reduce production list(sep) -> sep list(sep) 
-- On LET reduce production list(sep) -> sep list(sep) 
-- On LCURLY reduce production list(sep) -> sep list(sep) 
-- On INT64 reduce production list(sep) -> sep list(sep) 
-- On INT32 reduce production list(sep) -> sep list(sep) 
-- On INT reduce production list(sep) -> sep list(sep) 
-- On IN reduce production list(sep) -> sep list(sep) 
-- On IMPORT reduce production list(sep) -> sep list(sep) 
-- On IDENT reduce production list(sep) -> sep list(sep) 
-- On FUNCTION reduce production list(sep) -> sep list(sep) 
-- On FLOAT reduce production list(sep) -> sep list(sep) 
-- On FALSE reduce production list(sep) -> sep list(sep) 
-- On EOF reduce production list(sep) -> sep list(sep) 
-- On BEGIN reduce production list(sep) -> sep list(sep) 

State 5:
file_input -> list(sep) . structure_toplevel EOF [ # ]
-- On USING shift to state 6
-- On UNDERSCORE shift to state 11
-- On IMPORT shift to state 12
-- On IDENT shift to state 14
-- On FUNCTION shift to state 15
-- On structure_toplevel shift to state 132
-- On structure_item_toplevel shift to state 134
-- On structure_item shift to state 136
-- On simple_pattern shift to state 137
-- On list(many_delim(structure_item_toplevel,sep)) shift to state 141
-- On EOF reduce production list(many_delim(structure_item_toplevel,sep)) -> 

State 6:
structure_item_toplevel -> USING . TYPE LBRACKET VERSION_NUMBER RBRACKET [ SEMICOLON NEWLINE ]
-- On TYPE shift to state 7

State 7:
structure_item_toplevel -> USING TYPE . LBRACKET VERSION_NUMBER RBRACKET [ SEMICOLON NEWLINE ]
-- On LBRACKET shift to state 8

State 8:
structure_item_toplevel -> USING TYPE LBRACKET . VERSION_NUMBER RBRACKET [ SEMICOLON NEWLINE ]
-- On VERSION_NUMBER shift to state 9

State 9:
structure_item_toplevel -> USING TYPE LBRACKET VERSION_NUMBER . RBRACKET [ SEMICOLON NEWLINE ]
-- On RBRACKET shift to state 10

State 10:
structure_item_toplevel -> USING TYPE LBRACKET VERSION_NUMBER RBRACKET . [ SEMICOLON NEWLINE ]
-- On SEMICOLON reduce production structure_item_toplevel -> USING TYPE LBRACKET VERSION_NUMBER RBRACKET 
-- On NEWLINE reduce production structure_item_toplevel -> USING TYPE LBRACKET VERSION_NUMBER RBRACKET 

State 11:
simple_pattern -> UNDERSCORE . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LPAREN EQUAL COMMA COLON ]
-- On SEMICOLON reduce production simple_pattern -> UNDERSCORE 
-- On RPAREN reduce production simple_pattern -> UNDERSCORE 
-- On RIGHT_STAB reduce production simple_pattern -> UNDERSCORE 
-- On PIPE reduce production simple_pattern -> UNDERSCORE 
-- On NEWLINE reduce production simple_pattern -> UNDERSCORE 
-- On LPAREN reduce production simple_pattern -> UNDERSCORE 
-- On EQUAL reduce production simple_pattern -> UNDERSCORE 
-- On COMMA reduce production simple_pattern -> UNDERSCORE 
-- On COLON reduce production simple_pattern -> UNDERSCORE 

State 12:
structure_item -> IMPORT . TYPE [ SEMICOLON NEWLINE ]
-- On TYPE shift to state 13

State 13:
structure_item -> IMPORT TYPE . [ SEMICOLON NEWLINE ]
-- On SEMICOLON reduce production structure_item -> IMPORT TYPE 
-- On NEWLINE reduce production structure_item -> IMPORT TYPE 

State 14:
simple_pattern -> IDENT . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LPAREN EQUAL COMMA COLON ]
-- On SEMICOLON reduce production simple_pattern -> IDENT 
-- On RPAREN reduce production simple_pattern -> IDENT 
-- On RIGHT_STAB reduce production simple_pattern -> IDENT 
-- On PIPE reduce production simple_pattern -> IDENT 
-- On NEWLINE reduce production simple_pattern -> IDENT 
-- On LPAREN reduce production simple_pattern -> IDENT 
-- On EQUAL reduce production simple_pattern -> IDENT 
-- On COMMA reduce production simple_pattern -> IDENT 
-- On COLON reduce production simple_pattern -> IDENT 

State 15:
structure_item -> FUNCTION . simple_pattern func_proto_body [ SEMICOLON NEWLINE ]
-- On UNDERSCORE shift to state 11
-- On IDENT shift to state 14
-- On simple_pattern shift to state 16

State 16:
structure_item -> FUNCTION simple_pattern . func_proto_body [ SEMICOLON NEWLINE ]
-- On SEMICOLON shift to state 1
-- On RIGHT_STAB shift to state 17
-- On NEWLINE shift to state 2
-- On LPAREN shift to state 57
-- On sep shift to state 42
-- On nonempty_list(sep) shift to state 44
-- On func_proto_tail shift to state 65
-- On func_proto_body shift to state 131

State 17:
func_proto_tail -> RIGHT_STAB . expr [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
func_proto_tail -> RIGHT_STAB . core_type LCURLY list(sep) seq_expr RCURLY [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
func_proto_tail -> RIGHT_STAB . core_type nonempty_list(sep) seq_expr END [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On UNDERSCORE shift to state 18
-- On TYPE shift to state 19
-- On TRUE shift to state 20
-- On STRING shift to state 21
-- On QUOTE shift to state 22
-- On PIPE shift to state 24
-- On LPAREN shift to state 121
-- On LET shift to state 47
-- On LCURLY shift to state 51
-- On INT64 shift to state 52
-- On INT32 shift to state 53
-- On INT shift to state 54
-- On IDENT shift to state 55
-- On FUNCTION shift to state 56
-- On FLOAT shift to state 67
-- On FALSE shift to state 68
-- On BEGIN shift to state 69
-- On simple_expr shift to state 70
-- On simple_core_type_or_tuple shift to state 35
-- On simple_core_type shift to state 36
-- On let_main shift to state 73
-- On expr shift to state 122
-- On core_type shift to state 123
-- On constant shift to state 83
-- On call shift to state 84
-- On block shift to state 85
-- On apply shift to state 86
-- On anon_func shift to state 87

State 18:
simple_core_type -> UNDERSCORE . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On SEMICOLON reduce production simple_core_type -> UNDERSCORE 
-- On RPAREN reduce production simple_core_type -> UNDERSCORE 
-- On RIGHT_STAB reduce production simple_core_type -> UNDERSCORE 
-- On PIPE reduce production simple_core_type -> UNDERSCORE 
-- On NEWLINE reduce production simple_core_type -> UNDERSCORE 
-- On LCURLY reduce production simple_core_type -> UNDERSCORE 
-- On EQUAL reduce production simple_core_type -> UNDERSCORE 
-- On COMMA reduce production simple_core_type -> UNDERSCORE 

State 19:
simple_core_type -> TYPE . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On SEMICOLON reduce production simple_core_type -> TYPE 
-- On RPAREN reduce production simple_core_type -> TYPE 
-- On RIGHT_STAB reduce production simple_core_type -> TYPE 
-- On PIPE reduce production simple_core_type -> TYPE 
-- On NEWLINE reduce production simple_core_type -> TYPE 
-- On LCURLY reduce production simple_core_type -> TYPE 
-- On EQUAL reduce production simple_core_type -> TYPE 
-- On COMMA reduce production simple_core_type -> TYPE 

State 20:
constant -> TRUE . [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On SEMICOLON reduce production constant -> TRUE 
-- On RPAREN reduce production constant -> TRUE 
-- On RCURLY reduce production constant -> TRUE 
-- On RBRACKET reduce production constant -> TRUE 
-- On NEWLINE reduce production constant -> TRUE 
-- On LPAREN reduce production constant -> TRUE 
-- On LBRACKET reduce production constant -> TRUE 
-- On IN reduce production constant -> TRUE 
-- On END reduce production constant -> TRUE 
-- On COMMA reduce production constant -> TRUE 

State 21:
constant -> STRING . [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On SEMICOLON reduce production constant -> STRING 
-- On RPAREN reduce production constant -> STRING 
-- On RCURLY reduce production constant -> STRING 
-- On RBRACKET reduce production constant -> STRING 
-- On NEWLINE reduce production constant -> STRING 
-- On LPAREN reduce production constant -> STRING 
-- On LBRACKET reduce production constant -> STRING 
-- On IN reduce production constant -> STRING 
-- On END reduce production constant -> STRING 
-- On COMMA reduce production constant -> STRING 

State 22:
simple_core_type -> QUOTE . IDENT [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On IDENT shift to state 23

State 23:
simple_core_type -> QUOTE IDENT . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On SEMICOLON reduce production simple_core_type -> QUOTE IDENT 
-- On RPAREN reduce production simple_core_type -> QUOTE IDENT 
-- On RIGHT_STAB reduce production simple_core_type -> QUOTE IDENT 
-- On PIPE reduce production simple_core_type -> QUOTE IDENT 
-- On NEWLINE reduce production simple_core_type -> QUOTE IDENT 
-- On LCURLY reduce production simple_core_type -> QUOTE IDENT 
-- On EQUAL reduce production simple_core_type -> QUOTE IDENT 
-- On COMMA reduce production simple_core_type -> QUOTE IDENT 

State 24:
anon_func -> PIPE . separated_nonempty_list(COMMA,pattern) PIPE func_proto_tail [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On UNDERSCORE shift to state 11
-- On IDENT shift to state 14
-- On simple_pattern shift to state 25
-- On separated_nonempty_list(COMMA,pattern) shift to state 40
-- On pattern shift to state 59

State 25:
pattern -> simple_pattern . [ RPAREN PIPE EQUAL COMMA ]
pattern -> simple_pattern . COLON core_type [ RPAREN PIPE EQUAL COMMA ]
-- On COLON shift to state 26
-- On RPAREN reduce production pattern -> simple_pattern 
-- On PIPE reduce production pattern -> simple_pattern 
-- On EQUAL reduce production pattern -> simple_pattern 
-- On COMMA reduce production pattern -> simple_pattern 

State 26:
pattern -> simple_pattern COLON . core_type [ RPAREN PIPE EQUAL COMMA ]
-- On UNDERSCORE shift to state 18
-- On TYPE shift to state 19
-- On QUOTE shift to state 22
-- On LPAREN shift to state 27
-- On simple_core_type_or_tuple shift to state 35
-- On simple_core_type shift to state 36
-- On core_type shift to state 37

State 27:
simple_core_type_or_tuple -> LPAREN . simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On UNDERSCORE shift to state 18
-- On TYPE shift to state 19
-- On QUOTE shift to state 22
-- On simple_core_type shift to state 28

State 28:
simple_core_type_or_tuple -> LPAREN simple_core_type . COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On COMMA shift to state 29

State 29:
simple_core_type_or_tuple -> LPAREN simple_core_type COMMA . separated_nonempty_list(COMMA,simple_core_type) RPAREN [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On UNDERSCORE shift to state 18
-- On TYPE shift to state 19
-- On QUOTE shift to state 22
-- On simple_core_type shift to state 30
-- On separated_nonempty_list(COMMA,simple_core_type) shift to state 33

State 30:
separated_nonempty_list(COMMA,simple_core_type) -> simple_core_type . [ RPAREN ]
separated_nonempty_list(COMMA,simple_core_type) -> simple_core_type . COMMA separated_nonempty_list(COMMA,simple_core_type) [ RPAREN ]
-- On COMMA shift to state 31
-- On RPAREN reduce production separated_nonempty_list(COMMA,simple_core_type) -> simple_core_type 

State 31:
separated_nonempty_list(COMMA,simple_core_type) -> simple_core_type COMMA . separated_nonempty_list(COMMA,simple_core_type) [ RPAREN ]
-- On UNDERSCORE shift to state 18
-- On TYPE shift to state 19
-- On QUOTE shift to state 22
-- On simple_core_type shift to state 30
-- On separated_nonempty_list(COMMA,simple_core_type) shift to state 32

State 32:
separated_nonempty_list(COMMA,simple_core_type) -> simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) . [ RPAREN ]
-- On RPAREN reduce production separated_nonempty_list(COMMA,simple_core_type) -> simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) 

State 33:
simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) . RPAREN [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On RPAREN shift to state 34

State 34:
simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On SEMICOLON reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On RPAREN reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On RIGHT_STAB reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On PIPE reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On NEWLINE reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On LCURLY reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On EQUAL reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 
-- On COMMA reduce production simple_core_type_or_tuple -> LPAREN simple_core_type COMMA separated_nonempty_list(COMMA,simple_core_type) RPAREN 

State 35:
core_type -> simple_core_type_or_tuple . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On SEMICOLON reduce production core_type -> simple_core_type_or_tuple 
-- On RPAREN reduce production core_type -> simple_core_type_or_tuple 
-- On RIGHT_STAB reduce production core_type -> simple_core_type_or_tuple 
-- On PIPE reduce production core_type -> simple_core_type_or_tuple 
-- On NEWLINE reduce production core_type -> simple_core_type_or_tuple 
-- On LCURLY reduce production core_type -> simple_core_type_or_tuple 
-- On EQUAL reduce production core_type -> simple_core_type_or_tuple 
-- On COMMA reduce production core_type -> simple_core_type_or_tuple 

State 36:
simple_core_type_or_tuple -> simple_core_type . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On SEMICOLON reduce production simple_core_type_or_tuple -> simple_core_type 
-- On RPAREN reduce production simple_core_type_or_tuple -> simple_core_type 
-- On RIGHT_STAB reduce production simple_core_type_or_tuple -> simple_core_type 
-- On PIPE reduce production simple_core_type_or_tuple -> simple_core_type 
-- On NEWLINE reduce production simple_core_type_or_tuple -> simple_core_type 
-- On LCURLY reduce production simple_core_type_or_tuple -> simple_core_type 
-- On EQUAL reduce production simple_core_type_or_tuple -> simple_core_type 
-- On COMMA reduce production simple_core_type_or_tuple -> simple_core_type 

State 37:
core_type -> core_type . RIGHT_STAB core_type [ RPAREN RIGHT_STAB PIPE EQUAL COMMA ]
pattern -> simple_pattern COLON core_type . [ RPAREN PIPE EQUAL COMMA ]
-- On RIGHT_STAB shift to state 38
-- On RPAREN reduce production pattern -> simple_pattern COLON core_type 
-- On PIPE reduce production pattern -> simple_pattern COLON core_type 
-- On EQUAL reduce production pattern -> simple_pattern COLON core_type 
-- On COMMA reduce production pattern -> simple_pattern COLON core_type 

State 38:
core_type -> core_type RIGHT_STAB . core_type [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On UNDERSCORE shift to state 18
-- On TYPE shift to state 19
-- On QUOTE shift to state 22
-- On LPAREN shift to state 27
-- On simple_core_type_or_tuple shift to state 35
-- On simple_core_type shift to state 36
-- On core_type shift to state 39

State 39:
core_type -> core_type . RIGHT_STAB core_type [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
core_type -> core_type RIGHT_STAB core_type . [ SEMICOLON RPAREN RIGHT_STAB PIPE NEWLINE LCURLY EQUAL COMMA ]
-- On RIGHT_STAB shift to state 38
-- On SEMICOLON reduce production core_type -> core_type RIGHT_STAB core_type 
-- On RPAREN reduce production core_type -> core_type RIGHT_STAB core_type 
-- On PIPE reduce production core_type -> core_type RIGHT_STAB core_type 
-- On NEWLINE reduce production core_type -> core_type RIGHT_STAB core_type 
-- On LCURLY reduce production core_type -> core_type RIGHT_STAB core_type 
-- On EQUAL reduce production core_type -> core_type RIGHT_STAB core_type 
-- On COMMA reduce production core_type -> core_type RIGHT_STAB core_type 

State 40:
anon_func -> PIPE separated_nonempty_list(COMMA,pattern) . PIPE func_proto_tail [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On PIPE shift to state 41

State 41:
anon_func -> PIPE separated_nonempty_list(COMMA,pattern) PIPE . func_proto_tail [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On SEMICOLON shift to state 1
-- On RIGHT_STAB shift to state 17
-- On NEWLINE shift to state 2
-- On sep shift to state 42
-- On nonempty_list(sep) shift to state 44
-- On func_proto_tail shift to state 120

State 42:
nonempty_list(sep) -> sep . [ USING UNDERSCORE TRUE STRING RIGHT_STAB RIGHT_FAT RIGHT_CURVY PIPE LPAREN LET LCURLY INT64 INT32 INT IMPORT IDENT FUNCTION FLOAT FALSE EOF BEGIN ]
nonempty_list(sep) -> sep . nonempty_list(sep) [ USING UNDERSCORE TRUE STRING RIGHT_STAB RIGHT_FAT RIGHT_CURVY PIPE LPAREN LET LCURLY INT64 INT32 INT IMPORT IDENT FUNCTION FLOAT FALSE EOF BEGIN ]
-- On SEMICOLON shift to state 1
-- On NEWLINE shift to state 2
-- On sep shift to state 42
-- On nonempty_list(sep) shift to state 43
-- On USING reduce production nonempty_list(sep) -> sep 
-- On UNDERSCORE reduce production nonempty_list(sep) -> sep 
-- On TRUE reduce production nonempty_list(sep) -> sep 
-- On STRING reduce production nonempty_list(sep) -> sep 
-- On RIGHT_STAB reduce production nonempty_list(sep) -> sep 
-- On RIGHT_FAT reduce production nonempty_list(sep) -> sep 
-- On RIGHT_CURVY reduce production nonempty_list(sep) -> sep 
-- On PIPE reduce production nonempty_list(sep) -> sep 
-- On LPAREN reduce production nonempty_list(sep) -> sep 
-- On LET reduce production nonempty_list(sep) -> sep 
-- On LCURLY reduce production nonempty_list(sep) -> sep 
-- On INT64 reduce production nonempty_list(sep) -> sep 
-- On INT32 reduce production nonempty_list(sep) -> sep 
-- On INT reduce production nonempty_list(sep) -> sep 
-- On IMPORT reduce production nonempty_list(sep) -> sep 
-- On IDENT reduce production nonempty_list(sep) -> sep 
-- On FUNCTION reduce production nonempty_list(sep) -> sep 
-- On FLOAT reduce production nonempty_list(sep) -> sep 
-- On FALSE reduce production nonempty_list(sep) -> sep 
-- On EOF reduce production nonempty_list(sep) -> sep 
-- On BEGIN reduce production nonempty_list(sep) -> sep 

State 43:
nonempty_list(sep) -> sep nonempty_list(sep) . [ USING UNDERSCORE TRUE STRING RIGHT_STAB RIGHT_FAT RIGHT_CURVY PIPE LPAREN LET LCURLY INT64 INT32 INT IMPORT IDENT FUNCTION FLOAT FALSE EOF BEGIN ]
-- On USING reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On UNDERSCORE reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On TRUE reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On STRING reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On RIGHT_STAB reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On RIGHT_FAT reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On RIGHT_CURVY reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On PIPE reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On LPAREN reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On LET reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On LCURLY reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On INT64 reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On INT32 reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On INT reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On IMPORT reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On IDENT reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On FUNCTION reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On FLOAT reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On FALSE reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On EOF reduce production nonempty_list(sep) -> sep nonempty_list(sep) 
-- On BEGIN reduce production nonempty_list(sep) -> sep nonempty_list(sep) 

State 44:
func_proto_tail -> nonempty_list(sep) . seq_expr END [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On TRUE shift to state 20
-- On STRING shift to state 21
-- On PIPE shift to state 24
-- On LPAREN shift to state 45
-- On LET shift to state 47
-- On LCURLY shift to state 51
-- On INT64 shift to state 52
-- On INT32 shift to state 53
-- On INT shift to state 54
-- On IDENT shift to state 55
-- On FUNCTION shift to state 56
-- On FLOAT shift to state 67
-- On FALSE shift to state 68
-- On BEGIN shift to state 69
-- On simple_expr shift to state 70
-- On seq_expr shift to state 118
-- On let_main shift to state 73
-- On expr shift to state 74
-- On constant shift to state 83
-- On call shift to state 84
-- On block shift to state 85
-- On apply shift to state 86
-- On anon_func shift to state 87

State 45:
constant -> LPAREN . RPAREN [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
expr -> LPAREN . expr COMMA separated_nonempty_list(COMMA,expr) RPAREN [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
simple_expr -> LPAREN . expr RPAREN [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On TRUE shift to state 20
-- On STRING shift to state 21
-- On RPAREN shift to state 46
-- On PIPE shift to state 24
-- On LPAREN shift to state 45
-- On LET shift to state 47
-- On LCURLY shift to state 51
-- On INT64 shift to state 52
-- On INT32 shift to state 53
-- On INT shift to state 54
-- On IDENT shift to state 55
-- On FUNCTION shift to state 56
-- On FLOAT shift to state 67
-- On FALSE shift to state 68
-- On BEGIN shift to state 69
-- On simple_expr shift to state 70
-- On let_main shift to state 73
-- On expr shift to state 113
-- On constant shift to state 83
-- On call shift to state 84
-- On block shift to state 85
-- On apply shift to state 86
-- On anon_func shift to state 87

State 46:
constant -> LPAREN RPAREN . [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On SEMICOLON reduce production constant -> LPAREN RPAREN 
-- On RPAREN reduce production constant -> LPAREN RPAREN 
-- On RCURLY reduce production constant -> LPAREN RPAREN 
-- On RBRACKET reduce production constant -> LPAREN RPAREN 
-- On NEWLINE reduce production constant -> LPAREN RPAREN 
-- On LPAREN reduce production constant -> LPAREN RPAREN 
-- On LBRACKET reduce production constant -> LPAREN RPAREN 
-- On IN reduce production constant -> LPAREN RPAREN 
-- On END reduce production constant -> LPAREN RPAREN 
-- On COMMA reduce production constant -> LPAREN RPAREN 

State 47:
let_main -> LET . list(sep) let_binding_many list(sep) IN list(sep) seq_expr END [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On SEMICOLON shift to state 1
-- On NEWLINE shift to state 2
-- On sep shift to state 3
-- On list(sep) shift to state 48
-- On UNDERSCORE reduce production list(sep) -> 
-- On IDENT reduce production list(sep) -> 

State 48:
let_main -> LET list(sep) . let_binding_many list(sep) IN list(sep) seq_expr END [ SEMICOLON RPAREN RCURLY RBRACKET NEWLINE LPAREN LBRACKET IN END COMMA ]
-- On UNDERSCORE shift to state 11
-- On IDENT shift to state 14
-- On simple_pattern shift to state 25
-- On pattern shift to state 49
-- On let_binding_many shift to state 104
-- On let_binding shift to state 110

State 49:
let_binding -> pattern . EQUAL expr option(sep_bound_call) [ SEMICOLON NEWLINE IN ]
-- On EQUAL shift to state 50
